@@ -1,7 +1,7 @@
 [gd_scene load_steps=6 format=3 uid="uid://cuqm30mdbu41k"]
 
 [ext_resource type="Script" uid="uid://d33oqm6uprjxl" path="res://Board/DuelCreaturesBoard.cs" id="1_s27tx"]
-[ext_resource type="PackedScene" uid="uid://dm8sksf3b1gcw" path="res://Board/UnitCircle.tscn" id="3_iu5jy"]
+[ext_resource type="PackedScene" uid="uid://dm8sksf3b1gcw" path="res://Board/UnitCircleComponent.tscn" id="3_iu5jy"]
 [ext_resource type="PackedScene" uid="uid://bevj84kr2566s" path="res://Board/CardLineStatic.tscn" id="4_3hmgy"]
 [ext_resource type="PackedScene" uid="uid://b7fl8cs62jr2v" path="res://Board/Hand.tscn" id="5_iu5jy"]
 [ext_resource type="PackedScene" uid="uid://cow87og7qhndr" path="res://Board/CardVerticalStack.tscn" id="6_3hmgy"]
@@ -239,7 +239,9 @@ theme_override_constants/margin_bottom = 10
 [node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterArea/MarginContainer"]
 layout_mode = 2
 
-[node name="Button" type="Button" parent="VBoxContainer/CenterArea/MarginContainer/HBoxContainer"]
+[node name="EndPhaseButton" type="Button" parent="VBoxContainer/CenterArea/MarginContainer/HBoxContainer"]
+unique_name_in_owner = true
+visible = false
 layout_mode = 2
 theme_override_font_sizes/font_size = 32
 text = "End Phase"
@@ -371,12 +373,10 @@ theme_override_constants/separation = 20
 
 [node name="PlayerFrontLeft" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Center/MarginContainer/VBoxContainer/Circles/LeftZone" instance=ExtResource("3_iu5jy")]
 unique_name_in_owner = true
-custom_minimum_size = Vector2(0, 0)
 layout_mode = 2
 
 [node name="PlayerBackLeft" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Center/MarginContainer/VBoxContainer/Circles/LeftZone" instance=ExtResource("3_iu5jy")]
 unique_name_in_owner = true
-custom_minimum_size = Vector2(0, 0)
 layout_mode = 2
 
 [node name="Center" type="VBoxContainer" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Center/MarginContainer/VBoxContainer/Circles"]
@@ -385,12 +385,10 @@ theme_override_constants/separation = 20
 
 [node name="PlayerVanguard" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Center/MarginContainer/VBoxContainer/Circles/Center" instance=ExtResource("3_iu5jy")]
 unique_name_in_owner = true
-custom_minimum_size = Vector2(0, 0)
 layout_mode = 2
 
 [node name="PlayerBackCenter" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Center/MarginContainer/VBoxContainer/Circles/Center" instance=ExtResource("3_iu5jy")]
 unique_name_in_owner = true
-custom_minimum_size = Vector2(0, 0)
 layout_mode = 2
 
 [node name="Right" type="VBoxContainer" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Center/MarginContainer/VBoxContainer/Circles"]
@@ -446,6 +444,8 @@ grow_horizontal = 2
 [node name="OppHand" parent="Opp Hand" instance=ExtResource("5_iu5jy")]
 unique_name_in_owner = true
 layout_mode = 2
+Separation = 0
+HideCards = false
 
 [node name="GuardZone" parent="." instance=ExtResource("3_iu5jy")]
 layout_mode = 1
@@ -460,6 +460,7 @@ offset_right = 96.5
 offset_bottom = 96.5
 grow_horizontal = 2
 grow_vertical = 2
+script = null
 
 [node name="PlayerHand" type="PanelContainer" parent="."]
 layout_mode = 1
@@ -474,3 +475,5 @@ grow_vertical = 0
 [node name="PlayerHand" parent="PlayerHand" instance=ExtResource("5_iu5jy")]
 unique_name_in_owner = true
 layout_mode = 2
+Separation = 0
+HideCards = false
