@@ -1,0 +1,6 @@
+using ArC.CardGames.Predefined.Vanguard;
+
+public interface IEventBusUtilizer
+{
+    void SetEventBus(VanguardEventBus eventBus);
+}
