@@ -7,17 +7,37 @@ using Godot;
 
 public partial class DuelCreaturesBoard : Control
 {
+    Button EndPhaseButton;
+
     VanguardGameSession _gameSession;
     VanguardPlayerProfile player1 => _gameSession.Game.Player1;
     VanguardPlayerProfile player2 => _gameSession.Game.Player2;
 
     string mulliganPhase = "Mulligan Phase";
     string ridePhase = "Ride Phase";
+    string mainPhase = "Main Phase";
 
     public override void _Ready()
     {
+        EndPhaseButton = GetNode<Button>($"%{nameof(EndPhaseButton)}");
+        EndPhaseButton.Pressed += OnEndPhaseButtonPressed;
         SetComponents();
         PlayerHand.CardPressed += OnHandCardPressed;
+    }
+
+    private void OnEndPhaseButtonPressed()
+    {
+        EndPhasePressed?.Invoke();
+    }
+
+    public void ShowEndPhaseButton()
+    {
+        EndPhaseButton.Show();
+    }
+
+    public void HideEndPhaseButton()
+    {
+        EndPhaseButton.Hide();
     }
 
     private void OnHandCardPressed(Card card)
@@ -38,12 +58,14 @@ public partial class DuelCreaturesBoard : Control
         var game = gameSession.Game;
         PlayerHand.BindHand(game.Board.Player1Area.Hand);
         OppHand.BindHand(game.Board.Player2Area.Hand);
+        PlayerVanguard.BindUnitCircle(game.Board.Player1Area.Vanguard);
     }
 
     private void SetupEventBus(VanguardEventBus eventBus)
     {
         PlayerHand.SetEventBus(eventBus);
         OppHand.SetEventBus(eventBus);
+        PlayerVanguard.SetEventBus(eventBus);
     }
 
     private void OnPhaseChanged(IPhase phase)
@@ -55,18 +77,26 @@ public partial class DuelCreaturesBoard : Control
                 PlayerPhaseIndicator.Text = mulliganPhase;
                 break;
             case RidePhase:
-                if(_gameSession.currentPlayer == player1)
-                {
-                    OppPhaseIndicator.Text = string.Empty;
-                    PlayerPhaseIndicator.Text = ridePhase;
-                }
-                if(_gameSession.currentPlayer == player2)
-                {
-                    PlayerPhaseIndicator.Text = string.Empty;
-                    OppPhaseIndicator.Text = ridePhase;
-                }
+                SetPhaseIndicatorToCurrentPlayer(ridePhase);
+                break;
+            case MainPhase:
+                SetPhaseIndicatorToCurrentPlayer(mainPhase);
                 break;
         };
+    }
+
+    private void SetPhaseIndicatorToCurrentPlayer(string message)
+    {
+        if (_gameSession.currentPlayer == player1)
+        {
+            OppPhaseIndicator.Text = string.Empty;
+            PlayerPhaseIndicator.Text = message;
+        }
+        if (_gameSession.currentPlayer == player2)
+        {
+            PlayerPhaseIndicator.Text = string.Empty;
+            OppPhaseIndicator.Text = message;
+        }
     }
 
     public void Reset()
@@ -101,4 +131,5 @@ public partial class DuelCreaturesBoard : Control
     }
 
     public event Action<Card> HandCardPressed;
+    public event Action EndPhasePressed;
 }
