@@ -1,34 +1,0 @@
-[gd_scene load_steps=4 format=3 uid="uid://dm8sksf3b1gcw"]
-
-[ext_resource type="Script" uid="uid://ccq70upyqje4r" path="res://Board/UnitCircle.cs" id="1_711vi"]
-[ext_resource type="Script" uid="uid://d0xdsvmtayatq" path="res://Components/CardRotationContainer.cs" id="2_70hme"]
-[ext_resource type="PackedScene" uid="uid://b3rw6rjka7eon" path="res://Card/Card.tscn" id="3_g4i3h"]
-
-[node name="UnitCircle" type="PanelContainer"]
-custom_minimum_size = Vector2(189, 189)
-offset_right = 4.0
-offset_bottom = 4.0
-script = ExtResource("1_711vi")
-
-[node name="BG" type="ColorRect" parent="."]
-layout_mode = 2
-color = Color(0.6784314, 0.6784314, 0.6784314, 1)
-
-[node name="MarginContainer" type="MarginContainer" parent="."]
-custom_minimum_size = Vector2(189, 189)
-layout_mode = 2
-theme_override_constants/margin_left = 2
-theme_override_constants/margin_top = 2
-theme_override_constants/margin_right = 2
-theme_override_constants/margin_bottom = 2
-
-[node name="CardRotationContainer" type="Control" parent="MarginContainer"]
-unique_name_in_owner = true
-custom_minimum_size = Vector2(189, 189)
-layout_mode = 2
-script = ExtResource("2_70hme")
-metadata/_custom_type_script = "uid://d0xdsvmtayatq"
-
-[node name="Card" parent="MarginContainer/CardRotationContainer" instance=ExtResource("3_g4i3h")]
-layout_mode = 1
-scale = Vector2(0.45, 0.45)
